# weather_lens

./: .env.example  .gitignore  README.md  collect_weather_data.py  create_env.sh  docker-compose.yml  hello.py  pyproject.toml
weather_lens/: Dockerfile  manage.py  requirements.txt
weather_lens/dashboard/: urls.py  views.py
weather_lens/dashboard/templates/: index.html  weather_dashboard.html
weather_lens/weather_lens/: asgi.py  settings.py  urls.py  wsgi.py
